tests/errors/w_noexcept.pxd
cdef object test_return_object_noexcept_in_pxd(x) noexcept
cdef object test_return_object_in_pxd(x)
